# darkforce

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yaml  package.json
.github/workflows/: build.yml
dag/: Cargo.toml
scheduler/: Cargo.toml  Dockerfile
scheduler/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs  print_banner.rs  setup_logger.rs
shared/src/dag/: dag_manager.rs  mod.rs
shared/src/settings/: load_settings.rs  mod.rs  settings.rs
shared/src/store/: dag_description.rs  get_store_from_config.rs  mod.rs  mongodb_store.rs  store.rs
web/: Cargo.toml  Dockerfile  build.rs
web/app/: gatsby-config.js  package.json
web/app/src/components/Footer/: Footer.module.scss  Footer.tsx
web/app/src/components/Header/: DarkforceImage.tsx  Header.module.scss  Header.tsx
web/app/src/components/Layout/: Layout.module.scss  Layout.tsx
web/app/src/components/Menu/: Menu.module.scss  Menu.tsx  index.tsx
web/app/src/pages/: dags.tsx  index.tsx  settings.tsx  users.tsx
web/app/src/styles/: global.scss
web/src/: main.rs  query.rs  schema.rs  start_web_server.rs
worker/: Cargo.toml  Dockerfile
worker/src/: main.rs
