[package]
name = "darkforce_scheduler"
version = "0.1.0"
authors = ["Joatin Granlund <granlundjoatin@gmail.com>", "lykata"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.21", features = ["full"] }
slog = "2.5.2"
failure = "0.1.8"
futures = "0.3.5"
darkforce_shared = { path = "../shared" }
