[package]
name = "darkforce_shared"
version = "0.1.0"
authors = ["Joatin Granlund <granlundjoatin@gmail.com>", "lykata"]
edition = "2018"

[dependencies]
slog = "2.5.2"
sloggers = "1.0.1"
failure = "0.1.8"
futures = "0.3.5"
config = "0.10.1"
serde = "1.0.110"
mongodb = "0.10.0"
bson = "0.14.1"
chrono = { version = "0.4.11", features = ["serde"] }
base64 = "0.12.1"
tokio = { version = "0.2.21", features = ["full"] }
libloading = "0.6.2"
colored = "1.9"
